--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        ros_distro: [humble, jazzy, kilted]
+        ros_distro: [jazzy, kilted]
     permissions:
       contents: read
       packages: write
