--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -56,6 +56,7 @@ jobs:
             -I $ROS_INC/rosidl_runtime_c \
             -I $ROS_INC/rosidl_typesupport_interface \
             -I $ROS_INC/type_description_interfaces \
+            -I $ROS_INC/service_msgs \
             $ROS_INC/rcl/rcl/rcl.h
 
       - name: Create POM file
