feat: Added builtin_interfaces include folder to jextract command.

--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -57,6 +57,7 @@ jobs:
             -I $ROS_INC/rosidl_typesupport_interface \
             -I $ROS_INC/type_description_interfaces \
             -I $ROS_INC/service_msgs \
+            -I $ROS_INC/builtin_interfaces \
             $ROS_INC/rcl/rcl/rcl.h
 
       - name: Create POM file
