--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -58,6 +58,8 @@ jobs:
             -I $ROS_INC/type_description_interfaces \
             -I $ROS_INC/service_msgs \
             -I $ROS_INC/builtin_interfaces \
+            -I $ROS_INC/rosidl_dynamic_typesupport \
+            -I $ROS_INC/rosidl_dynamic_typesupport_fastrtps \
             $ROS_INC/rcl/rcl/rcl.h
 
       - name: Create POM file
