--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -9,10 +9,11 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-24.04
     strategy:
+      fail-fast: false
       matrix:
         ros_distro: [jazzy, kilted]
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -39,7 +40,6 @@ jobs:
 
       - name: Generate Bindings
         run: |
-          # Activeer de ROS omgeving om de juiste paden te laden
           source /opt/ros/${{ matrix.ros_distro }}/setup.bash
           mkdir -p src/main/java
           
@@ -86,5 +86,15 @@ jobs:
 
       - name: Build and Publish to GitHub Packages
         run: mvn deploy -DskipTests --batch-mode
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Create and Push Tag
+        run: |
+          TAG_NAME="${{ matrix.ros_distro }}-25.0.${{ github.run_number }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag $TAG_NAME
+          git push origin $TAG_NAME
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
