--- a/.github/workflows/create-java-bindings.yml
+++ b/.github/workflows/create-java-bindings.yml
@@ -80,6 +80,7 @@ jobs:
               -I $ROS_INC/rcutils \
               -I $ROS_INC/fastcdr \
               -I $ROS_INC/std_msgs \
+              -I $ROS_INC/service_msgs \
               $TEMP_HEADER
               
             rm $TEMP_HEADER
